changed ex04 and makefile

--- a/c_11/ex05/Makefile
+++ b/c_11/ex05/Makefile
@@ -1,5 +1,5 @@
 all: ft_do_op.c ft_do_op_2.c ft_do_op_3.c
-	@cc -o do-op ft_do_op.c ft_do_op_2.c ft_do_op_3.c
+	@cc -o do-op -Wall -Wextra -Werror ft_do_op.c ft_do_op_2.c ft_do_op_3.c
 
 clean:
 	@rm -f do-op
