--- a/c_11/ex05/Makefile
+++ b/c_11/ex05/Makefile
@@ -1,6 +1,8 @@
 all: ft_do_op.c ft_do_op_2.c ft_do_op_3.c
 	@cc -Wall -Wextra -Werror -o do-op ft_do_op.c ft_do_op_2.c ft_do_op_3.c
 
+do-op: all
+
 clean:
 	@rm -f do-op
 
