--- a/c_10/ex02/Makefile
+++ b/c_10/ex02/Makefile
@@ -1,6 +1,8 @@
 all: ft_tail.c ft_tail_2.c
 	@cc -Wall -Wextra -Werror -o ft_tail ft_tail.c ft_tail_2.c
 
+ft_tail: all
+
 clean:
 	@rm -f ft_tail
 
