got to redo ex04

--- a/c_11/ex05/Makefile
+++ b/c_11/ex05/Makefile
@@ -1,11 +1,19 @@
-all: ft_do_op.c ft_do_op_2.c ft_do_op_3.c
-	@cc -Wall -Wextra -Werror -o do-op ft_do_op.c ft_do_op_2.c ft_do_op_3.c
+CC = cc
+CFLAGS = -Wall -Wextra -Werror
+RM = rm -f
+NAME = do-op
+OBJS = ${SRCS:.c=.o}
+SRCS = sources/ft_do_op.c sources/ft_do_op_2.c sources/ft_do_op_3.c
+
+all:
+	@${CC} ${CFLAGS} ${SRCS} -o ${NAME}
 
 do-op: all
 
 clean:
-	@rm -f do-op
+	@${RM} ${OBJS}
 
 fclean: clean
+	@${RM} ${NAME}
 
 re: fclean all
