--- a/c_11/ex05/Makefile
+++ b/c_11/ex05/Makefile
@@ -5,10 +5,13 @@ NAME = do-op
 OBJS = ${SRCS:.c=.o}
 SRCS = sources/ft_do_op.c sources/ft_do_op_2.c sources/ft_do_op_3.c
 
-all:
-	@${CC} ${CFLAGS} ${SRCS} -o ${NAME}
+.c.o: 
+	@${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
 
-do-op: all
+${NAME}: ${OBJS}
+	@${CC} ${CFLAGS} ${OBJS} -o ${NAME}
+
+all: ${NAME}
 
 clean:
 	@${RM} ${OBJS}
@@ -17,3 +20,5 @@ fclean: clean
 	@${RM} ${NAME}
 
 re: fclean all
+
+.PHONY: all clean fclean re .c.o
